# 123erfasst-mcp-server

./: .gitignore  LICENSE  PUBLISHING_GUIDE.md  README.md  config.py  cursor-mcp-config.json.example  env.example  pyproject.toml  quick-setup.py  server.py  setup.py  start-mcp-server.ps1  start-mcp-server.sh  start-server.py  test-mcp-tools.py
libraries/equipment_management/: __init__.py  equipment_manager.py  exceptions.py  mcp_tools.py
libraries/graphql_client/: __init__.py  cli.py  client.py  exceptions.py
libraries/models/: __init__.py  cli.py  equipment.py  factories.py  person.py  planning.py  project.py  staff_time.py  ticket.py
libraries/project_management/: __init__.py  cli.py  exceptions.py  mcp_tools.py  project_manager.py
libraries/staff_management/: __init__.py  exceptions.py  mcp_tools.py  staff_manager.py
libraries/time_tracking/: __init__.py  cli.py  exceptions.py  mcp_tools.py  time_tracker.py
tests/unit/: test_equipment_management.py  test_graphql_client.py  test_models.py  test_project_management.py  test_staff_management.py  test_time_tracking.py
